--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    body{
-      background: hsl(47, 88%, 63%);
-      display: grid;
-      place-items: center;
-      height: 100vh;
+    body {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
       margin: 0;
+      background: hsl(47, 88%, 63%);
       font-family: 'Figtree', sans-serif;
     }
+
+    main {
+      flex: 1;
+      display: grid;
+      place-items: center;
+    }
+
     .card{
       background: white;
       display: flex;
@@ -93,18 +100,20 @@
   </style>
 </head>
 <body>
-  <div class = "card">
-    <img src="./assets/images/illustration-article.svg" alt="blog post">
-    <div class="status">Learning</div>
-    <div class = "p_date">Published 21 Dec 2023</div>
-    
-    <div class="title">HTML & CSS foundations</div>
-    <div class="description">These languages are the backbone of every website, defining structure, content, and presentation.</div>
-    <div class = "author">
-      <img src="./assets/images/image-avatar.webp" alt="author pic">
-      <div class="author">Greg Hooper</div>
-    </div>
-  </div>  
+  <main>
+    <div class = "card">
+      <img src="./assets/images/illustration-article.svg" alt="blog post">
+      <div class="status">Learning</div>
+      <div class = "p_date">Published 21 Dec 2023</div>
+      
+      <div class="title">HTML & CSS foundations</div>
+      <div class="description">These languages are the backbone of every website, defining structure, content, and presentation.</div>
+      <div class = "author">
+        <img src="./assets/images/image-avatar.webp" alt="author pic">
+        <div class="author">Greg Hooper</div>
+      </div>
+    </div>  
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Megan P</a>.
